--- a/talk/reveal.js/index.html
+++ b/talk/reveal.js/index.html
@@ -46,7 +46,8 @@
 <section id="je-suis" class="slide level1">
 <h1>Je suis</h1>
 <ul>
-<li>développeur senior freelance depuis 8 ans (principalement PHP)</li>
+<li>développeur senior</li>
+<li>freelance depuis 8 ans avec <a href="http://kayuko.com">Kayuko</a> (principalement PHP)</li>
 <li>co-fondateur et président des conférences <a href="http://sudweb.fr">Sud Web</a></li>
 <li>co-fondateur éditeur <a href="http://letrainde13h37.fr">Le train de 13h37</a></li>
 <li>co-organisateur du meetup <a href="http://webenvert.fr">Web en Vert</a></li>
