Improve talks wording

--- a/talk/reveal.js/index.html
+++ b/talk/reveal.js/index.html
@@ -47,7 +47,7 @@
 <h1>Je suis</h1>
 <ul>
 <li>développeur senior</li>
-<li>freelance depuis 8 ans avec <a href="http://kayuko.com">Kayuko</a> (principalement PHP)</li>
+<li>co-fondateur de l'agence Web <a href="http://kayuko.com">Kayuko</a> (principalement PHP)</li>
 <li>co-fondateur et président des conférences <a href="http://sudweb.fr">Sud Web</a></li>
 <li>co-fondateur éditeur <a href="http://letrainde13h37.fr">Le train de 13h37</a></li>
 <li>co-organisateur du meetup <a href="http://webenvert.fr">Web en Vert</a></li>
@@ -57,8 +57,9 @@
 <h1>Me contacter</h1>
 <ul>
 <li>email : loic@mathaud.fr</li>
+<li>http://loic.mathaud.fr</li>
 <li>twitter : <span class="citation" data-cites="loicmathaud">@loicmathaud</span></li>
-<li>IRC (freenode) : loicm</li>
+<li>IRC (freenode) : loic_m</li>
 </ul>
 </section>
 <section id="petite-histoire" class="slide level1">
@@ -66,7 +67,7 @@
 <p>Il était une fois une startup…</p>
 <ul>
 <li>Problématiques variées et intéressantes</li>
-<li>Poste de Lead Dev</li>
+<li>Poste de Lead Dev (oui, j'étais tout seul au début ^^)</li>
 </ul>
 </section>
 <section id="comment-se-déroule-telle-en-vrai" class="slide level1">
@@ -79,8 +80,8 @@
 <section id="résultat" class="slide level1">
 <h1>Résultat</h1>
 <ul>
-<li>application monolitique</li>
-<li>dette technique</li>
+<li>Application monolitique</li>
+<li>Dette technique</li>
 </ul>
 </section>
 <section id="mais" class="slide level1">
@@ -89,26 +90,26 @@
 </section>
 <section id="et-puis" class="slide level1">
 <h1>Et puis…</h1>
-<p>d'autres développeurs se joignent à l'équipe</p>
+<p>D'autres développeurs se joignent à l'équipe</p>
 </section>
 <section id="les-problèmes-émergent-13" class="slide level1">
 <h1>Les problèmes émergent 1/3</h1>
-<p>Difficulté à comprendre l'ensemble de l'application</p>
+<p>Difficultés à comprendre l'ensemble de l'application</p>
 </section>
 <section id="les-problèmes-émergent-23" class="slide level1">
 <h1>Les problèmes émergent 2/3</h1>
-<p>Risque de péter quelque chose par effet de bord, sans le savoir (pas de tests)</p>
+<p>Risques de casser quelque chose par effet de bord, sans le savoir (pas de tests)</p>
 </section>
 <section id="les-problèmes-émergent-33" class="slide level1">
 <h1>Les problèmes émergent 3/3</h1>
 <p>Performances raisonnables mais pas exceptionnelles</p>
 </section>
-<section id="résultat-1" class="slide level1">
-<h1>Résultat</h1>
+<section id="résultats" class="slide level1">
+<h1>Résultats</h1>
 <ul>
-<li>fustration de l'équipe</li>
-<li>ralentissement du rythme des releases</li>
-<li>pertes de confiances</li>
+<li>Fustrations dans les équipes</li>
+<li>Ralentissement du rythme des releases</li>
+<li>Pertes de confiances</li>
 </ul>
 </section>
 <section id="un-exemple-de-bad-code" class="slide level1">
@@ -122,10 +123,10 @@
 </section>
 <section id="continuons-lamélioration" class="slide level1">
 <h1>Continuons l'amélioration</h1>
-<p>Gestion d'évènements</p>
+<p>Ajoutons une gestion d'évènements et découplons</p>
 </section>
-<section id="avantages-au-découplage" class="slide level1">
-<h1>Avantages au découplage</h1>
+<section id="avantages-du-découplage" class="slide level1">
+<h1>Avantages du découplage</h1>
 <p>Plus facile :</p>
 <ul>
 <li>à lire</li>
@@ -157,7 +158,7 @@
 <li>Déporter le code</li>
 <li>Gérer la charge</li>
 <li>Mixer les technologies</li>
-<li>Ajout features facilité</li>
+<li>Ajout de fonctionnalités facilité</li>
 </ul>
 </section>
 <section id="avec-du-code-1" class="slide level1">
